# iSS

./: .emissionfunction.cpp.swp  .gitignore  CMakeLists.txt  GNUmakefile  LICENSE  NBD_test.cpp  OSCAR_header.txt  Poisson.cpp  Poisson.h  README.md  RandomVariable.cpp  RandomVariable.h  RandomVariable1DArray.h  RandomVariable2DArray.h  Table.cpp  Table.h  Zmake.sh  arsenal.h  changelog.txt  compile.sh  copy-data-spectra.sh  emissionfunction.cpp  emissionfunction.h  fileR.py  iSS.e  main.cpp  main.h  prepare-spectra.sh  readindata.cpp  readindata.h
.github/workflows/: BuildTest.yml
bin_utilities/: ParameterReader.h  bin_eta.cpp  bin_tau.cpp
for_paraview/: freeze_out2.fmt  listR.py  paraview_convert_fz.sh
for_paraview/lib/: Data.py  DataSetAttr.py  LookupTable.py  Normals.py  PolyData.py  Scalars.py  UnstructuredGrid.py  Vectors.py
for_paraview/lib152/: Data.py  DataSetAttr.py  Field.py  PolyData.py  Scalars.py  StructuredGrid.py  Tensors.py  TextureCoordinates.py  common.py
for_paraview/vtk/: fz_0.vtk
iSS_tables/EOS_tables/: download_HRG4D.sh
iSS_tables/backup_tables/: generate_chosen_particles_SMASH.py
iSS_tables/deltaf_tables/: download_newRTA.sh
iSS_tables/deltaf_tables/urqmd/: download_NEoS4D_deltafCoeffs.sh
scripts/: dirR.py  listR.py  record-spectra.py  spectraFromHydroResults.sh
src/: BosonMomentumSampler.cpp  BosonMomentumSampler.h  BosonMomentumSampler_IntegratedTests.cpp  CMakeLists.txt  FSSW.cpp  FSSW.h  FermionMomentumSampler.cpp  FermionMomentumSampler.h  FermionMomentumSampler_IntegratedTests.cpp  GNUmakefile  Histogram.cpp  Histogram.h  MomentumSamplerBase.cpp  MomentumSamplerBase.h  MomentumSamplerShell.cpp  MomentumSamplerShell.h  NBD.cpp  NBD.h  ParameterReader.cpp  ParameterReader.h  Pearson_test.cpp  Poisson.cpp  Random.cpp  Random.h  RandomVariable1DArray.cpp  RandomVariable1DArray.h  RandomVariable2DArray.cpp  RandomVariable2DArray.h  Random_UnitTest.cpp  Spectators.cpp  Spectators.h  Spectators_UnitTest.cpp  Stopwatch.h  Table.cpp  Table.h  TableFunction.cpp  TableFunction.h  arsenal.cpp  arsenal.h  data_struct.h  (+17 more)
src/old_src/: NBD.cpp  NBD.h  NBD_test.cpp  Pearson_distribution.cpp  Pearson_test.cpp  Poisson.cpp  Poisson.h  RandomVariable.cpp  RandomVariable.h  RandomVariableNDArray.cpp  RandomVariableNDArray.h  netBaryon_test.cpp
tables/: readme.txt
tests/: RandomVariableNDArray_test.cpp  RunAutoTestIdeal.sh  RunAutoTestIdeal1.sh  RunAutoTestIdeal2.sh  RunAutoTestIdeal3.sh  RunAutoTestIdeal4.sh  RunAutoTestViscous1.sh  RunAutoTestViscous1_newRTA.sh  RunAutoTestViscous2.sh  RunAutoTestViscous2_newRTA.sh  RunAutoTestViscous3.sh  RunAutoTestViscous4.sh  TableFunction_test.cpp  TestOutputFiles.py  music_input  music_input_12
utilities/: computeThermodynamicJ.py  filter_SMASH_pdg.py  reorder_SMASH_pdg.py
utilities/bin_utilities/: Table.cpp  Table.h  TableFunction.cpp  TableFunction.h  arsenal.cpp  arsenal.h  average_all.cpp  bin_delta_phi.cpp  bin_pT.cpp  bin_pT_all.cpp  bin_phi.cpp
utilities/for_paraview/: 3col.fmt  freeze_out.fmt  oscar.fmt  readme.txt  vtk_converter.py
utilities/for_paraview/lib/: ColorScalars.py  DataSet.py  Field.py  RectilinearGrid.py  StructuredPoints.py  Tensors.py  TextureCoordinates.py  __init__.py
utilities/for_paraview/lib152/: ColorScalars.py  DataSet.py  LookupTable.py  Normals.py  RectilinearGrid.py  StructuredPoints.py  UnstructuredGrid.py  Vectors.py  __init__.py
utilities/scripts/: correct_momentum_conservation.py  spectraFromHydroResultsOW.sh  split_events.py
utilities/tests/: arsenal_test.cpp  check_samples.py  maketest.sh
